# clinic-template

./: .gitignore  .pre-commit-config.yaml  DataPolicy.md  LICENSE  Makefile  README.md  cookiecutter.json  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: main.workflow.yml
docs/: slurm.md  speaking_code.md
hooks/: post_gen_project.py
infra/: development.Dockerfile
project/: main.py
project/query/: sample.json
{{ cookiecutter.project_slug }}/: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
{{ cookiecutter.project_slug }}/.github/workflows/: cocoa.workflow.yml  main.workflow.yml
{{ cookiecutter.project_slug }}/_examples/data_science/: PROJECT_SETUP.md  TUTORIAL.md
{{ cookiecutter.project_slug }}/_examples/data_science/src/{{ cookiecutter.code_directory }}/: cli.py  evaluation.py  inference.py  io.py  pipeline.py  register.py
{{ cookiecutter.project_slug }}/_examples/data_science/src/{{ cookiecutter.code_directory }}/evaluators/: __init__.py  classifier_evaluator.py  example_evaluator.py
{{ cookiecutter.project_slug }}/_examples/data_science/src/{{ cookiecutter.code_directory }}/inference_strategies/: __init__.py  example_strategy.py
{{ cookiecutter.project_slug }}/_examples/generic/notebooks/: Test.ipynb
{{ cookiecutter.project_slug }}/_examples/generic/src/{{ cookiecutter.code_directory }}/: pipeline_example.py
{{ cookiecutter.project_slug }}/config/query/: sample.json
{{ cookiecutter.project_slug }}/notebooks/: Dockerfile  Test.ipynb
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.code_directory }}/: __init__.py  pipeline_example.py  preprocess_util_lib_example.py  settings.py
{{ cookiecutter.project_slug }}/utils/: pipeline_example.py  preprocess_util_lib_example.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.code_directory }}/: Dockerfile  __init__.py  main.py  pipeline_example.py  preprocess.py  preprocess_util_example.py  preprocess_util_lib_example.py
(+6 files in other folders)
