[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
  # project packages
  "numpy~=2.2",
  "pandas~=2.2",
  {% if cookiecutter.data_dir != 'none' %}"python-dotenv~=1.0.0",{% endif %}
  {% if cookiecutter.cluster == 'yes' %}"submitit~=1.4",{% endif %}
]

[dependency-groups]
dev = [
  "ruff==0.7.2",
  "pre-commit~=3.5",
  "coverage~=7.3",
  "pytest~=7.4",
  "jupyterlab~=4.0.0",
  "ipykernel~=6.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
extend-select = [
  # by default, ruff enables all F and a subset of E rules
  # for a description of rulesets and examples, see:
  # https://docs.astral.sh/ruff/rules/
  "ANN",    # flake8-annotations - type annotations, some ignored
  "B",      # bugbear - identifies likely bugs
  "C4",     # flake8-comprehensions - identifies redundant calls in comprehensions
  "D",      # pydocstyle - requires docstrings on all public modules/functions/classes
  "I",      # isort
  "N801",   # pep8-naming - enforce ClassNamesStyle
  "N804",   # pep8-naming - first arg of classmethod should be cls
  "N805",   # pep8-naming - first arg of method should be self
  "PD",     # pandas-vet
  "PLR2004",# Pylint no magic values!
  "PTH",    # prefer pathlib over os.path as seems to be the consensus
  "Q",      # flake8-quotes - double quotes preferred (like black)
  "S",      # flake8-bandit - security checks
  "UP",     # pyupgrade - requires preferred syntax in newer python versions
  "YTT",    # flake8-2020 - corrects code that doesn't anticipate 2 digit python minor version  
]

ignore = [
  "D415",   # allow first line of doctstrings to end without punctuation
  "ANN002", # missing type on *args
  "ANN003", # missing type on **kwargs
  "B905",   # won't work on python <3.10
  "S101",   # allow assertions
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
python_files = "*.py"